# python-project-52

./: .gitignore  Makefile  README.md  build.sh  pyproject.toml  pytest.ini  ruff.toml
task_manager/: settings.py  urls.py  views.py
task_manager/labels/: forms.py  models.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: models.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/task_manager/: settings.py
task_manager/tasks/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py
task_manager/templates/: base.html  index.html
task_manager/templates/labels/: create.html  delete.html  labels_list.html  update.html
task_manager/templates/statuses/: create.html  delete.html  statuses_list.html  update.html
task_manager/templates/tasks/: create.html  delete.html  task_detail.html  tasks_list.html  update.html
task_manager/templates/users/: create.html  delete.html  login.html  update.html  users_list.html
task_manager/users/: forms.py  models.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py
